--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "gsap": "^3.2.6",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "parallax-js": "^3.1.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "scrollreveal": "^4.0.6",
+    "slick-carousel": "^1.8.1"
   }
 }
